- Replaced order of primary/secondary on mobile for single Projects - Fixed all nav bugs - Fixed secondary widget spacing on mobile

--- a/css/editor.css
+++ b/css/editor.css
@@ -1,5 +1,5 @@
 /***
-* RHD Dev: Compiled at 7:29:21 PM on 11-04-2016
+* RHD Dev: Compiled at 8:56:57 PM on 11-04-2016
 ***/
 
 /**
@@ -1349,6 +1349,10 @@ input[type="button"]:active {
 .soundcloud-sidebar .widget-title {
   font-size: 1.4em;
 }
+.soundcloud-sidebar .widget-featured-image img {
+  display: block;
+  margin: 0 auto;
+}
 .ninja-forms-cont input,
 .ninja-forms-cont textarea {
   font-family: 'Roboto', sans-serif;
@@ -1423,7 +1427,7 @@ input[type="button"]:active {
   }
   #site-navigation-container {
     width: 60%;
-    display: block;
+    display: block !important;
     position: absolute;
     top: 50%;
     right: 0;
@@ -1591,12 +1595,18 @@ input[type="button"]:active {
     float: right;
   }
 }
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 50em) {
+  #primary {
+    width: 48%;
+  }
   #primary.single-project-content {
     float: right;
   }
+  #primary .entry-content iframe {
+    width: 100%;
+  }
   #secondary {
-    width: 340px;
+    width: 300px;
     float: left;
   }
   #secondary .widget {
@@ -1609,6 +1619,9 @@ input[type="button"]:active {
 @media screen and (min-width: 58em) {
   #primary.single-project-content {
     width: 56%;
+  }
+  #secondary {
+    width: 320px;
   }
 }
 @media screen and (min-width: 62em) {
@@ -1623,7 +1636,7 @@ input[type="button"]:active {
 }
 @media screen and (min-width: 66em) {
   #primary.single-project-content {
-    width: 64%;
+    width: 62%;
   }
 }
 @media screen and (min-width: 70em) {
