--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -558,6 +558,11 @@ input
 	.widget-title
 		font-size 1.4em
 
+	.widget-featured-image
+		img
+			display block
+			margin 0 auto
+
 
 /* ==========================================================================
 	Contact Page
@@ -646,7 +651,7 @@ input
 
 	#site-navigation-container
 		width 60%
-		display block
+		display block !important
 		position absolute
 		top 50%
 		right 0
@@ -813,16 +818,22 @@ input
 
 
 // Fixed-width 340px sidebar for Single Projects pages
-@media screen and (min-width 40em)
+@media screen and (min-width 50em)
 	#main
 		-clearfix()
 
 	#primary
+		width 48%
+
 		&.single-project-content
 			float right
 
+		.entry-content
+			iframe
+				width 100%
+
 	#secondary
-		width 340px
+		width 300px
 		float left
 
 		.widget
@@ -836,6 +847,9 @@ input
 	#primary
 		&.single-project-content
 			width 56%
+
+	#secondary
+		width 320px
 
 
 @media screen and (min-width 62em)
@@ -853,7 +867,7 @@ input
 @media screen and (min-width 66em)
 	#primary
 		&.single-project-content
-			width 64%
+			width 62%
 
 
 @media screen and (min-width 70em)
